# TUB-SNET-MA-SSI-MEC

./: .dockerignore  .gitignore  DOCUMENTATION.md  aca-py_cmdline_args.txt  example_docker_cmd.txt  requirements.txt  sdk_sync_bootstrap_data.sh  start_apps.txt  start_apps_local.txt
acapy-plugins/: .gitignore
acapy-plugins/ShortTTLForDIDDocCache/: pyproject.toml
acapy-plugins/ShortTTLForDIDDocCache/acapy_short_ttl_for_diddoc_cache/: __init__.py  cache.py
app/: global_config.py
app/app_authorities/: env_config.py  main.py
app/app_car/: env_config.py  main.py
app/app_digital_twin_car/: env_config.py  main.py
app/app_digital_twin_drone/: env_config.py  main.py
app/app_drone/: env_config.py  main.py
app/app_edge/: env_config.py  main.py
app/app_edge-operator/: env_config.py  main.py
app/utils/: agent.py  logger.py  utils.py
bootstrap/: 00_register-actors.py  actors.json
build-scripts/: build-base-app-image.sh  build-custom-indy-resolver-driver-image.sh
deployment/: 01-install-basic-software.yaml  04-01-clear-ssi-apps.yaml  04-02-prune-unused-images.yaml  04-03-deploy-ssi-apps.yaml  ansible.cfg  inventory
deployment/files/: 00_register-actors.py
deployment/group_vars/: all.yaml
deployment/host_vars/: ssi-ground.yaml
deployments/: 02-01-setup-von-network-clean.yaml  03-deploy-universal-resolver-custom-indy.yaml  04-01-clear-ssi-apps.yaml  04-02-deploy-ssi-apps.yaml  inventory
deployments/files/: 00_register-actors.py
dockerfiles/: apps.dockerfile  custom_indy_resolver_driver.dockerfile
infra/: README.MD
infra/ansible/: inventory  (+3 more)
(+60 files in other folders)
